# resources/lang/es/messages.php
@@ -1,0 +1,14 @@
+<?php
+
+return [
+    'subcategory' => [
+        'retrieved_all' => 'Subcategorías obtenidas correctamente.',
+        'retrieved' => 'Subcategoría obtenida correctamente.',
+        'created' => 'Subcategoría creada correctamente.',
+        'updated' => 'Subcategoría actualizada correctamente.',
+        'deleted' => 'Subcategoría eliminada correctamente.',
+        'creation_failed' => 'Error al crear la subcategoría.',
+        'update_failed' => 'Error al actualizar la subcategoría.',
+        'deletion_failed' => 'Error al eliminar la subcategoría.',
+    ],
+];
